[gd_scene load_steps=3 format=3 uid="uid://bwakp2pfegwpx"]

[ext_resource type="Script" path="res://scripts/scene_transition_trigger.gd" id="1_vbj0p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8jku"]
size = Vector2(16, 16)

[node name="SceneTransitionTrigger" type="Area2D"]
script = ExtResource("1_vbj0p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_w8jku")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
